--- a/Github/src/app/app.component.html
+++ b/Github/src/app/app.component.html
@@ -1,2 +1,4 @@
+<link rel="stylesheet" href="./app.component.css">
+<app-userpage></app-userpage>
+
 <router-outlet></router-outlet>
-<app-footer></app-footer>
