--- a/Github/src/styles.css
+++ b/Github/src/styles.css
@@ -1,21 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-* {
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-}
-
-html,
-body {
-    height: 100%;
-}
-
-body {
-    box-sizing: border-box;
-    background-color: #0d1117;
-    margin: 0;
-    color: #c9d1d9;
-}
-
-.mat-input-element {
-    color: #8b949e !important;
-    caret-color: #8b949e !important;
-}
+@import "~bootstrap/dist/css/bootstrap.css"
