--- a/src/app/userpage/userpage.component.html
+++ b/src/app/userpage/userpage.component.html
@@ -1,16 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github Search</title>
+    <title>Github_search</title>
     <link rel="stylesheet" href="./userpage.component.css">
 </head>
 <body>
     <div class="nav">
-       <h1 id="head">Github<span>Search</span></h1>
+       <h1 id="head">G-<span>Search</span></h1>
        <h3 id ="space" routerLink="repo">Repositories</h3>
        <h3><span>Users</span></h3>
 
@@ -51,3 +50,4 @@
     </div>
 </body>
 </html>
+
